--- a/cafe.html
+++ b/cafe.html
@@ -25,23 +25,9 @@
                             alt=""></a></li>
                 <li class="hover"><a href="cafe.html">Cà phê</a> </li>
                 <li class="hover"><a href="traa.html">Trà</a></li>
-                <li class="hover" class="xyz" style="position: relative;">
-                    Menu
-                    <ul class="sub_menu">
-                        <li class="sub_li">Tất cả
-                        </li>
-                        <li class="sub_li">Cà Phê</li>
-                        <li class="sub_li">Trà</li>
-                        <li class="sub_li">Cloud</li>
-                        <li class="sub_li">Hi-Tea-Healthy</li>
-                        <li class="sub_li">Trà xanh sôcôla</li>
-                        <li class="sub_li">Thức uống đá xay</li>
-                        <li class="sub_li">Bánh & Snack</li>
-                    </ul>
-                </li>
                 <li class="hover"><a href="ytt.html">Yêu thích</a></li>
                 <li class="hover"><a href="CloudFee.html">CloudFee</a></li>
-                <li class="hover">Cửa hàng</li>
+                <li class="hover"><a href="ch.html">Cửa hàng</a></li>
                 <li class="hover"><a href="giohang.html">Giỏ hàng</a></li>
                 <li id="Toggle" class="hover"></li>
                 <li id="tk" class="hover"></li>
