--- a/CloudFee.html
+++ b/CloudFee.html
@@ -20,18 +20,14 @@
 
         <div id="nav">
             <ul class="nav" style="border-bottom: 1px black solid;">
-                <li class="hover" style="overflow: hidden;"><a href="practice.html"><img class="nav3"
-                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTVRYrEaILChYnNHTn_TeXBAl8w-JmXBfXmZw&usqp=CAU"
-                    alt=""></a></li>
+                <li class="hover" style="overflow: hidden;" dde> <a href="practice.html"><img class="nav3"
+                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTVRYrEaILChYnNHTn_TeXBAl8w-JmXBfXmZw&usqp=CAU"
+                            alt=""></a></li>
                 <li class="hover"><a href="cafe.html">Cà phê</a> </li>
-                <li class="hover"><a href="traa.html">Trà</a> </li>
-                <li class="hover" >
-                    Menu
-                   
-                </li>
+                <li class="hover"><a href="traa.html">Trà</a></li>
                 <li class="hover"><a href="ytt.html">Yêu thích</a></li>
-                <li class="hover"><a href="CloudFee.html">CloudFee</a> </li>
-                <li class="hover">Cửa hàng</li>
+                <li class="hover"><a href="CloudFee.html">CloudFee</a></li>
+                <li class="hover"><a href="ch.html">Cửa hàng</a></li>
                 <li class="hover"><a href="giohang.html">Giỏ hàng</a></li>
                 <li id="Toggle" class="hover"></li>
                 <li id="tk" class="hover"></li>
