--- a/ch.html
+++ b/ch.html
@@ -1,26 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
-    <link rel="stylesheet" href="ch.css">
+    <link rel="stylesheet" href="giohang.css">
 </head>
+
 <body>
-<div>
-    <img style="width: 100%; opacity: 0.8; position: absolute;" src="https://file.hstatic.net/1000075078/file/_kh_9308_71dd5f99cfe4431a82bbf9dae99f71ea.jpg" alt="">
-    <div style="background-color: rgba(128, 128, 128, 0.7); position: relative; padding: 20px; margin-top: 100px;">
-        <ul style="list-style: none; padding: 0; margin: 0; font-family: 'Roboto', sans-serif; color: white; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);">
-            <li style="margin-bottom: 15px;">Nhà Riverside Vũ Tông Phan - Chung cư Riverside Gardens, 349 Vũ Tông Phan, Phường Khương Đình, Quận Thanh Xuân, Hà Nội.</li>
-            <li style="margin-bottom: 15px;">Nhà The Zen Residences - Toà nhà Zen Residence, Đường 2.2 Khu đô thị Gamuda Gardens, Phường Trần Phú, Quận Hoàng Mai, Hà Nội.</li>
-            <li style="margin-bottom: 15px;">Nhà Lê Văn Lương - 18T1 Lê Văn Lương, Phường Nhân Chính, Quận Thanh Xuân, Hà Nội.</li>
-            <li style="margin-bottom: 15px;">Nhà Hinode City - Toà nhà Hinode City, Số 201 Minh Khai, phường Minh Khai, quận Hai Bà Trưng, Hà Nội.</li>
-            <li style="margin-bottom: 15px;">Nhà Hoàng Đạo Thuý - 17T3 Hoàng Đạo Thuý, Trung Hoà, Cầu Giấy, Hà Nội.</li>
-            <li style="margin-bottom: 15px;">Nhà Trần Kim Xuyến - Chung cư E2 - Chelsea Residences, Yên Hoà, Cầu Giấy, Hà Nội.</li>
+    <div id="nav2">
+        <ul class="nav2">
+            <li> 154 Cửa hàng khắp cả nước</li>
+            <li>Đặt hàng: 1800.6936</li>
         </ul>
     </div>
-</div>
-</body>
+    <div>
+
+        <div id="nav">
+            <ul class="nav" style="border-bottom: 1px black solid;">
+                <li class="hover" style="overflow: hidden;" dde> <a href="practice.html"><img class="nav3"
+                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTVRYrEaILChYnNHTn_TeXBAl8w-JmXBfXmZw&usqp=CAU"
+                            alt=""></a></li>
+                <li class="hover"><a href="cafe.html">Cà phê</a> </li>
+                <li class="hover"><a href="traa.html">Trà</a></li>
+                <li class="hover"><a href="ytt.html">Yêu thích</a></li>
+                <li class="hover"><a href="CloudFee.html">CloudFee</a></li>
+                <li class="hover"><a href="ch.html">Cửa hàng</a></li>
+                <li class="hover"><a href="giohang.html">Giỏ hàng</a></li>
+                <li id="Toggle" class="hover"></li>
+                <li id="tk" class="hover"></li>
+            </ul>
+            
+            <div id="cart-container"></div>
+            <button id="order-button" style="background-color: red; border-radius: 5px; width: 10%; height: 45px;color: white; margin-left: 45%;">ĐẶT HÀNG</button>
+            <script src="giohang.js"></script>           
 </html>
