--- a/ch.html
+++ b/ch.html
@@ -32,8 +32,32 @@
                 <li id="Toggle" class="hover"></li>
                 <li id="tk" class="hover"></li>
             </ul>
-            
-            <div id="cart-container"></div>
-            <button id="order-button" style="background-color: red; border-radius: 5px; width: 10%; height: 45px;color: white; margin-left: 45%;">ĐẶT HÀNG</button>
-            <script src="giohang.js"></script>           
+            <div>
+                <img style="width: 100%; opacity: 0.8; position: absolute;"
+                    src="https://file.hstatic.net/1000075078/file/_kh_9308_71dd5f99cfe4431a82bbf9dae99f71ea.jpg" alt="">
+                <div style="background-color: rgba(128, 128, 128, 0.7); position: relative; padding: 20px;  ">
+                    <ul
+                        style="list-style: none; padding: 0; margin: 0; font-family: 'Roboto', sans-serif; color: white; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);">
+                        <li style="margin-bottom: 50px;margin-top: 100px;">Nhà Riverside Vũ Tông Phan - Chung cư
+                            Riverside Gardens, 349 Vũ
+                            Tông Phan, Phường Khương Đình, Quận Thanh Xuân, Hà Nội.</li>
+                        <li style="margin-bottom: 50px;">Nhà The Zen Residences - Toà nhà Zen Residence, Đường 2.2 Khu
+                            đô thị Gamuda Gardens, Phường Trần Phú, Quận Hoàng Mai, Hà Nội.</li>
+                        <li style="margin-bottom: 50px;">Nhà Lê Văn Lương - 18T1 Lê Văn Lương, Phường Nhân Chính, Quận
+                            Thanh Xuân, Hà Nội.</li>
+                        <li style="margin-bottom: 50px;">Nhà Hinode City - Toà nhà Hinode City, Số 201 Minh Khai, phường
+                            Minh Khai, quận Hai Bà Trưng, Hà Nội.</li>
+                        <li style="margin-bottom: 50px;">Nhà Hoàng Đạo Thuý - 17T3 Hoàng Đạo Thuý, Trung Hoà, Cầu Giấy,
+                            Hà Nội.</li>
+                        <li style="margin-bottom: 50px;">Nhà Trần Kim Xuyến - Chung cư E2 - Chelsea Residences, Yên Hoà,
+                            Cầu Giấy, Hà Nội.</li>
+                        <li style="margin-bottom: 50px;">3 Trung Hòa, Cầu Giấy, Hà Nội, Việt Nam.</li>
+                        <li style="margin-bottom: 50px;">Rice City Linh Đàm, Hoàng Mai, Hà Nội, Việt Nam</li>
+                        <li style="margin-bottom: 199px;">40 Xuân La, Tây Hồ, Hà Nội, Việt Nam</li>
+                    </ul>
+                </div>
+            </div>
+            <script src="ch.js"></script>
+</body>
+
 </html>
