--- a/traa.html
+++ b/traa.html
@@ -20,28 +20,14 @@
 
         <div id="nav">
             <ul class="nav" style="border-bottom: 1px black solid;">
-                <li class="hover" style="overflow: hidden;"> <a href="practice.html"><img class="nav3"
+                <li class="hover" style="overflow: hidden;" dde> <a href="practice.html"><img class="nav3"
                             src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTVRYrEaILChYnNHTn_TeXBAl8w-JmXBfXmZw&usqp=CAU"
                             alt=""></a></li>
                 <li class="hover"><a href="cafe.html">Cà phê</a> </li>
                 <li class="hover"><a href="traa.html">Trà</a></li>
-                <li class="hover" class="xyz" style="position: relative;">
-                    Menu
-                    <ul class="sub_menu">
-                     <li class="sub_li">Tất cả
-                     </li>
-                     <li class="sub_li">Cà Phê</li>
-                     <li class="sub_li">Trà</li>
-                     <li class="sub_li">Cloud</li>
-                     <li class="sub_li">Hi-Tea-Healthy</li>
-                     <li class="sub_li">Trà xanh sôcôla</li>
-                     <li class="sub_li">Thức uống đá xay</li>
-                     <li class="sub_li">Bánh & Snack</li>
-                    </ul>
-                </li>
                 <li class="hover"><a href="ytt.html">Yêu thích</a></li>
                 <li class="hover"><a href="CloudFee.html">CloudFee</a></li>
-                <li class="hover">Cửa hàng</li>
+                <li class="hover"><a href="ch.html">Cửa hàng</a></li>
                 <li class="hover"><a href="giohang.html">Giỏ hàng</a></li>
                 <li id="Toggle" class="hover"></li>
                 <li id="tk" class="hover"></li>
